Changed endpoint to do a silly implementation of CheckPrime5000 and added unit test case.