@@ -3,55 +3,101 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
     <artifactId>demoservice</artifactId>
-    <packaging>jar</packaging>
     <version>1.0</version>
     <name>graalnativedemo</name>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <java.version>23</java.version>
     </properties>
 
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.4.3</version>
+        <relativePath/>
+    </parent>
+
     <dependencies>
+    <!--
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.10.3</version>
+            <version>5.12.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.12.0</version>
+            <scope>test</scope>
+        </dependency>
+    -->
+    <!--
+        <dependency>
             <groupId>io.github.hakky54</groupId>
             <artifactId>logcaptor</artifactId>
-            <version>2.9.3</version>
+            <version>2.10.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.5.6</version>
+            <version>1.5.17</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.5.6</version>
+            <version>1.5.17</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>2.0.13</version>
+            <version>2.0.17</version>
         </dependency>
+    -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <!--
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>6.1.11</version>
+            <scope>test</scope>
+        </dependency>
+        -->
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.5.2</version>
+                <configuration>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
+                <version>3.14.0</version>
                 <configuration>
                     <fork>true</fork>
-                    <source>22</source>
-                    <target>22</target>
+                    <source>23</source>
+                    <target>23</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -67,19 +113,55 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.graalvm.buildtools</groupId>
+                <artifactId>native-maven-plugin</artifactId>
+                <configuration>
+                    <fallback>false</fallback>
+                    <agent>
+                        <enabled>true</enabled>
+                    </agent>
+                    <buildArgs>
+                        <buildArg>--gc=G1</buildArg> <!-- Use G1 GC -->
+                        <buildArg>-R:MinHeapSize=2G</buildArg>
+                        <buildArg>-R:MaxHeapSize=2G</buildArg>
+                        <buildArg>-march=native</buildArg> <!-- For best performance to compile natively and deploy on same CPU ISA / family -->
+                        <buildArg>--enable-sbom</buildArg> <!-- Embed a SBOM in binary -->
+                        <buildArg>-O3</buildArg> <!-- Enable all optimizations -->
+                        <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
+                        <!-- Standalone statically linked binary to run anywhere -->
+                        <!--    Got a segmentation fault in native-tests and final binary. -->
+                        <!--
+                        <buildArg>- -static - -libc=musl</buildArg>
+                        -->
+                        <!-- Experimental Option
+                          Build a mostly-static native executable that statically links everything except libc. 
+                          Only reqires a Linux distro with libc. -->
+                        <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg>
+                        <!-- Experimental Option - Generate detailed build report -->                        
+                        <buildArg>-H:+BuildReport</buildArg>
+                    </buildArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
     <profiles>
         <profile>
-        <id>native</id>
+            <id>production</id> <!-- mvn -Pproduction clean package -->
             <build>
                 <plugins>
                     <plugin>
                         <groupId>org.graalvm.buildtools</groupId>
                         <artifactId>native-maven-plugin</artifactId>
+                        <!--
                         <version>0.10.2</version>
                         <extensions>true</extensions>
+                        -->
                         <executions>
                             <execution>
                                 <id>build-native</id>
@@ -88,6 +170,55 @@
                                 </goals>
                                 <phase>package</phase>
                             </execution>
+                        <!--
+                            <execution>
+                                <id>test-native</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <phase>test</phase>
+                            </execution>
+                        -->
+                        </executions>
+                        <configuration>
+                            <buildArgs>
+                                <buildArg>--gc=G1</buildArg> <!-- Use G1 GC -->
+                                <buildArg>-R:MinHeapSize=2G</buildArg>
+                                <buildArg>-R:MaxHeapSize=2G</buildArg>
+                                <buildArg>-march=native</buildArg> <!-- For best performance to compile natively and deploy on same CPU ISA / family -->
+                                <buildArg>--enable-sbom</buildArg> <!-- Embed a SBOM in binary -->
+                                <buildArg>-O3</buildArg> <!-- Enable all optimizations -->
+                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
+                                <!--
+                                - Got a segmentation fault in native-tests and final binary.
+                                <buildArg>- -static - -libc=musl</buildArg> <!- - Standalone statically linked binary to run anywhere - ->
+                                -->
+                                <!-- Experimental Option
+                                     Build a mostly-static native executable that statically links everything except libc. 
+                                     Only reqires a Linux distro with libc. -->
+                                <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg>
+                                <!-- Experimental Option - Generate detailed build report -->
+                                <buildArg>-H:+BuildReport</buildArg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>testing</id> <!-- mvn -Ptesting clean test -->
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.10.2</version>
+                        <extensions>true</extensions>
+                        <executions>
                             <execution>
                                 <id>test-native</id>
                                 <goals>
@@ -102,8 +233,8 @@
                                 <buildArg>-R:MinHeapSize=2G</buildArg>
                                 <buildArg>-R:MaxHeapSize=2G</buildArg>
                                 <buildArg>-march=native</buildArg> <!-- For best performance to compile natively and deploy on same CPU ISA / family -->
-                                <buildArg>--enable-sbom</buildArg> <!-- Embed a SBOM in binary -->
-                                <buildArg>-O3</buildArg> <!-- Enable all optimizations -->
+                                <buildArg>-O0</buildArg> <!-- Enable all optimizations -->
+                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
                                 <!--
                                 - Got a segmentation fault in native-tests and final binary.
                                 <buildArg>- -static - -libc=musl</buildArg> <!- - Standalone statically linked binary to run anywhere - ->
@@ -112,10 +243,12 @@
                                      Build a mostly-static native executable that statically links everything except libc. 
                                      Only reqires a Linux distro with libc. -->
                                 <buildArg>-H:+StaticExecutableWithDynamicLibC</buildArg>
-                                <!-- Experimental Option - Generate detailed build report -->
-                                <buildArg>-H:+BuildReport</buildArg>
                             </buildArgs>
                         </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-maven-plugin</artifactId>
                     </plugin>
                 </plugins>
             </build>
